# Algorithems

./: .gitignore  CMakeLists.txt  README.md  analysis  build.py  build.sh  core_dump  stdout
benchmarks/: sorting_benchmark.c
examples/: demo.c  demo_stats_control.c  test_api_cleanup.c  test_stats_control.c
include/: algorithms.h
include/common/: common.h
include/sorting/: insertion_sort.h  merge_sort.h  selection_sort.h  shell_sort.h  sort_common.h
include/test/: test_util.h
src/: algorithms.c
src/sorting/: insertion_sort.c  merge_sort.c  selection_sort.c  shell_sorting.c  sort_common.c
tests/analys/: analys_filed.cpp
tests/sorting/: test_config.h  test_insertion_sort.cpp  test_merge_sort.cpp  test_selection_sort.cpp  test_shell_sort.cpp  test_sort_common.cpp
tests/util/: test_data_util.cpp  test_data_util.h
